--- a/Phone_book.Api/Phone_book.Api.csproj
+++ b/Phone_book.Api/Phone_book.Api.csproj
@@ -7,10 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Phone_book.Auth.Common\Phone_book.Auth.Common.csproj" />
     <ProjectReference Include="..\Phone_book.Data\Phone_book.Data.csproj" />
   </ItemGroup>
 
