--- a/Phone_book.AuthApi/Phone_book.Auth.Api.csproj
+++ b/Phone_book.AuthApi/Phone_book.Auth.Api.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.7" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.21.0" />
   </ItemGroup>
 
